...
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usc_net_id">USC Net ID</string>
    <string name="password">Password</string>
    <string name="you_can_choose_to">You can choose to</string>
    <string name="back">Back!</string>
    <string name="view_profile">View Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="or_make_a_booking_on_the_map">Or select a center on the map</string>
    <string name="selected">USC Lyon Center</string>
    <string name="view_upcoming_bookings">View Booking Summary</string>
    <string name="log_out">Log Out Current Account</string>
    <string name="welcome_">Welcome</string>
</resources>
